Hireforce/objects/Skill_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Acquired_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquired By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Acquired Skills</relationshipLabel>
        <relationshipName>Acquired_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_for__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Requirement</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Required Skills</relationshipLabel>
        <relationshipName>Required_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skill</label>
        <referenceTo>Skill__c</referenceTo>
        <relationshipLabel>Skill Entries</relationshipLabel>
        <relationshipName>Skill_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Skill Entry</label>
    <nameField>
        <displayFormat>SK-{0000}</displayFormat>
        <label>Skill Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Entries</pluralLabel>
    <recordTypes>
        <fullName>EmployeeSkill</fullName>
        <active>true</active>
        <description>Used to tag a skill to employee</description>
        <label>Employee Skill</label>
    </recordTypes>
    <recordTypes>
        <fullName>JobSkill</fullName>
        <active>true</active>
        <description>Used to add a required skill to job</description>
        <label>Job Skill</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>